--- a/Plataforma/dccomics/index.html
+++ b/Plataforma/dccomics/index.html
@@ -198,7 +198,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Batman del futuro -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Aves De Presa y La Fantabulosa Emancipacion De Una Harley Quinn -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula695.html">
+    <img src="https://image.tmdb.org/t/p/original/1wLqXiiiaTSK8Y0n7N85O0jaNJm.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Aves De Presa y La Fantabulosa Emancipación De Una Harley Quinn</div>
+  <div class="text-xs text-white/70">2020</div>
+</article><!-- Batman del futuro -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Series/serie71.html">
     <img src="https://image.tmdb.org/t/p/original/rpbHPyhLstNd5qgtjaDMdPtyPeQ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
