--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Lo que una chica quiere -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Aves De Presa y La Fantabulosa Emancipacion De Una Harley Quinn -->
+<li>
+  <a href="../Peliculas/pelicula695.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1wLqXiiiaTSK8Y0n7N85O0jaNJm.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Aves De Presa y La Fantabulosa Emancipación De Una Harley Quinn 2020</span>
+    <span class="hidden">Después de separarse de Joker, Harley Quinn y otras tres heroínas (Canario Negro, Cazadora y Renée Montoya) unen sus fuerzas para salvar a una niña (Cassandra Cain) del malvado rey del crimen Máscara Negra.</span>
+  </a>
+</li>
+<!--FIN--><!-- Lo que una chica quiere -->
 <li>
   <a href="../Peliculas/pelicula694.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
