--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Demon Slayer: Kimetsu no Yaiba -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Spermageddon -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula696.html">
+    <img src="https://image.tmdb.org/t/p/original/jYJJDtrGBAr1U9WBVuq809FyYQj.jpg" alt="Spermageddon" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Spermageddon</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Demon Slayer: Kimetsu no Yaiba -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie78.html">
     <img src="https://image.tmdb.org/t/p/original/inXU5hvbDbitrYOgLrq2QjYqiJD.jpg" alt="Demon Slayer: Kimetsu no Yaiba" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
