--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Aves De Presa y La Fantabulosa Emancipacion De Una Harley Quinn -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Spermageddon -->
+<li>
+  <a href="../Peliculas/pelicula696.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jYJJDtrGBAr1U9WBVuq809FyYQj.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Spermageddon 2025</span>
+    <span class="hidden">Cuánta la historia de amor entre Jens y Lisa, dos adolescentes, que tienen relaciones sexuales por primera vez. Mientras, Simón el Semen y sus amigos deben alcanzar su meta dorada, el Óvulo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Aves De Presa y La Fantabulosa Emancipacion De Una Harley Quinn -->
 <li>
   <a href="../Peliculas/pelicula695.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
