--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Spermageddon -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Al borde de la extincion -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula697.html">
+    <img src="https://image.tmdb.org/t/p/original/4RpEPkJ6osoSNOMZy5F7MS5L551.jpg" alt="Al borde de la extinción" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Al borde de la extinción</div>
+  <div class="text-xs text-white/70">2021</div>
+</article><!-- Spermageddon -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula696.html">
     <img src="https://image.tmdb.org/t/p/original/jYJJDtrGBAr1U9WBVuq809FyYQj.jpg" alt="Spermageddon" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
