--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- 50 Sombras muy Oscuras -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El ejercito de los ladrones -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula699.html">
+    <img src="https://image.tmdb.org/t/p/original/caAsCr4sDFUXAny77fOJJz60hom.jpg" alt="El ejército de los ladrones" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El ejército de los ladrones</div>
+  <div class="text-xs text-white/70">2021</div>
+</article><!-- 50 Sombras muy Oscuras -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula698.html">
     <img src="https://image.tmdb.org/t/p/original/eXxEz9GNVzbSUFvO5cEbpVsJbpw.jpg" alt="50 Sombras muy Oscuras" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
