--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Lo que una chica quiere -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi Amigo El Gigante -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula700.html">
+    <img src="https://image.tmdb.org/t/p/original/sglHfkazJxsIWHPlHrzb60mULLI.jpg" alt="Mi Amigo El Gigante" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mi Amigo El Gigante</div>
+  <div class="text-xs text-white/70">2016</div>
+</article><!-- Lo que una chica quiere -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula694.html">
     <img src="https://image.tmdb.org/t/p/original/pSwg5LnbVoAtalbKkYFfx2Wo6fQ.jpg" alt="Lo que una chica quiere" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
