--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ace Ventura: Un Loco En Africa -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Doctor Strange: Hechicero supremo -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula721.html">
+    <img src="https://image.tmdb.org/t/p/original/wJEZI3PWyMW7qcW6n9jyCh7Cclf.jpg" alt="Doctor Strange: Hechicero supremo" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Doctor Strange: Hechicero supremo</div>
+  <div class="text-xs text-white/70">2016</div>
+</article><!-- Ace Ventura: Un Loco En Africa -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula720.html">
     <img src="https://image.tmdb.org/t/p/original/899yWih4ic8AyczedYiX41g7TvQ.jpg" alt="Ace Ventura: Un Loco En África" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
