--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -184,7 +184,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/ggb9nmS5alJuA0ll0iU5YHiGbb0.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">X-Men: Días del futuro pasado 2014</span>
-    <span class="hidden">Los X-Men originales unen fuerzas y envían a Wolverine al pasado en un intento desesperado de cambiar la historia y prevenir un evento que desemboca en la perdición tanto para humanos como para mutantes.</span>
+    <span class="hidden">x men xmen x man xman x-man Los X-Men originales unen fuerzas y envían a Wolverine al pasado en un intento desesperado de cambiar la historia y prevenir un evento que desemboca en la perdición tanto para humanos como para mutantes.</span>
   </a>
 </li>
 <!--FIN--><!-- Los 4 Fantasticos -->
@@ -5447,7 +5447,7 @@ Es justamente aquí donde una familia de gánsteres irlandeses de origen nómada
   <a href="../Peliculas/pelicula175.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
     <img src="https://image.tmdb.org/t/p/original/6ED3G0lpBXRZtEDJD2xVYsqIwxI.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0">
     <span class="hidden">X-Men: Primera generacion 2011</span>
-    <span class="hidden">xmen man x-man xman En la decada de 1960, los humanos con superpoderes Charles Xavier y Erik Lensherr trabajan juntos para encontrar otros como ellos, pero la busqueda vengativa de Erik de un ambicioso mutante que arruino su vida provoca un cisma que los divide.</span>
+    <span class="hidden">xmen man x-man xman x men  En la decada de 1960, los humanos con superpoderes Charles Xavier y Erik Lensherr trabajan juntos para encontrar otros como ellos, pero la busqueda vengativa de Erik de un ambicioso mutante que arruino su vida provoca un cisma que los divide.</span>
   </a>
 </li>
 <!--FIN-->
