--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Doctor Strange en el multiverso de la locura -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Codigo: Traje rojo -->
+<li>
+  <a href="../Peliculas/pelicula723.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/dpskAcm71w5v8zQ8RmPmJiP31Om.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Código: Traje rojo 2024</span>
+    <span class="hidden">Después de que Santa Claus (nombre clave: Traje rojo) es secuestrado, el Jefe de Seguridad del Polo Norte debe formar equipo con el cazarrecompensas más infame del mundo en una misión trotamundos llena de acción para salvar la Navidad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Doctor Strange en el multiverso de la locura -->
 <li>
   <a href="../Peliculas/pelicula722.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
